Post update: 구글 클라우드 플랫폼 #1

--- a/_posts/2016-06-24-1.markdown
+++ b/_posts/2016-06-24-1.markdown
@@ -30,4 +30,28 @@ layout: post
 
 ![Compute Engine 메뉴](https://cloud.githubusercontent.com/assets/6007758/16329439/6388ad86-3a1d-11e6-852e-8f42dd0427b1.png)
 
-컴퓨트 엔진의 메뉴 중 VM 인스턴스를 선택하면 인스턴스의 목록들과 인스턴스들의 상태를 확인 할 수 있는 그래프가 화면에 보인다. 여기서 인스턴스를 생성하기 위해 상단에 인스턴스 만들기 버튼을 클릭한다. 
+컴퓨트 엔진의 메뉴 중 VM 인스턴스를 선택한다. 
+
+
+![VM 인스턴스](https://cloud.githubusercontent.com/assets/6007758/16329496/f9d1942e-3a1d-11e6-8a89-620c7a40a572.png)
+
+해당 메뉴를 선택하면 인스턴스의 목록들과 인스턴스들의 상태를 확인 할 수 있는 그래프가 화면에 보인다. 여기서 인스턴스를 생성하기 위해 상단에 인스턴스 만들기 버튼을 클릭한다.
+
+
+![인스턴스 만들기 - 1](https://cloud.githubusercontent.com/assets/6007758/16329503/1acf7362-3a1e-11e6-899b-c20020c5c326.png)
+
+인스턴스의 영역(Like Region of AWS)은 동아시아, 서부 유럽, 미국 중부, 미국 동부가 제공이 되고 미리 정의된 VM 스펙이나 이미지들을 선택할 수 있다. 여기서 VM 스펙이나 이미지들은 커스터마이징이 가능하다.
+
+
+![인스턴스 만들기 - 2](https://cloud.githubusercontent.com/assets/6007758/16329656/9a386c26-3a1e-11e6-8859-31852bff45b7.png)
+
+방화벽 메뉴에서 HTTP(S) 트래픽을 허용하고 자동화 메뉴의 시작 스크립트에 간단하게 아파치를 설치하는 bash script를 작성하면 인스턴스가 생성되면서 아파치 서버를 자동으로 구동한다.
+
+
+![success](https://cloud.githubusercontent.com/assets/6007758/16329690/dfc72cd2-3a1e-11e6-91cc-3c1d4b0796c8.png)
+
+마지막으로 하단의 만들기 버튼을 눌러 과정을 마무리하면 얼마 지나지 않아 인스턴스가 생성되고 생성된 인스턴스의 아이피 주소로 접속하면 아파치 서버가 구동되어 위와 같은 화면을 확인 할 수 있다.
+
+
+## Next
+이렇게 해서 간단하게 구글 클라우드 플랫폼을 소개하고 인스턴스를 만들어 봤다. 다음은 인스턴스를 묶어서 관리할 수 있는 Instance Group과 HTTP(S) 요청을 설정된 인스턴스로 분배해주는 Load Balancer에 대해서 간단히 살펴보도록 하겠다.
