--- a/_posts/2016-06-24-1.markdown
+++ b/_posts/2016-06-24-1.markdown
@@ -1,6 +1,6 @@
 ---
 published: true
-title: 구글 클라우드 플랫폼 #1
+title: 구글 클라우드 플랫폼 \#1
 layout: post
 ---
 웹 서비스를 위한 클라우드 플랫폼을 알려달라고 하면 단연 'AWS'가 먼저 떠오를 것이다. 그 이유는 멋쟁이 사자처럼 3기 활동을 하면서 처음 알게된 클라우드 컴퓨팅 서비스였기 때문이다. 그리고 현재, 멋쟁이 사자처럼 3기 활동을 마치고 1년 정도가 지난 지금 스타트업 회사에서 웹 서비스를 개발하고 있다. 
@@ -9,7 +9,7 @@ layout: post
 
 
 ## 구글 클라우드 플랫폼
-구글 클라우드 플랫폼 (이하 GCP)는 구글에서 제공하는 클라우드 컴퓨팅 플랫폼이다. 위에서 말했듯이 아마존의 AWS처럼 구글은 GCP를 서비스하고 있다.  GCP는 구글 검색과 유튜브와 같은 서비스와 동일한 인프라를 제공한다. 이런 GCP 클라우드 서비스 시장에서 작년 기준 점유율 5%로 4위에 랭크되었다. [링크](http://www.itworld.co.kr/tags/51741/aws/91705)
+구글 클라우드 플랫폼 (이하 GCP)는 구글에서 제공하는 클라우드 컴퓨팅 플랫폼이다. 위에서 말했듯이 아마존의 AWS처럼 구글은 GCP를 서비스하고 있다.  GCP는 구글 검색과 유튜브와 같은 서비스와 동일한 인프라를 제공한다. 이런 GCP 클라우드 서비스 시장에서 작년 기준 점유율 5%로 4위에 랭크되었다. ([링크](http://www.itworld.co.kr/tags/51741/aws/91705))
 
 ## Case study
 현재 일하고 있는 스타트업에서 제공하고 있는 웹 서비스를 다음과 같은 구조로 설계했다.
