Post update: 구글 클라우드 플랫폼 (2)

--- a/_posts/2016-07-14-2.markdown
+++ b/_posts/2016-07-14-2.markdown
@@ -29,7 +29,7 @@ layout: post
 이제 직접 해보자. 먼저 인스턴스 그룹이 필요하다. 오토 스케일링이 가능해야 하기 때문에 인스턴스 템플릿을 만들고 템플릿을 적용한 인스턴스 그룹을 생성해야 한다.
   
 ![템플릿 만들기](https://cloud.githubusercontent.com/assets/6007758/16829397/f94a6b74-49d2-11e6-9b3f-770d9ad50d1f.png)
-지난 번에 사용했던 컴퓨트 엔진 메뉴 중 인스턴스 템플릿 메뉴를 선택하고 생성버튼을 클릭하면 위와 같은 화면을 볼 수 있다. 인스턴스 설정과 비슷하게 머신 유형과 부팅 이미지, API 엑세스, 방화벽 규칙을 설정하고 자동화 메뉴의 시작 스크립트에 아파치를 설치하는 쉘 스크립트를 작성한다. (지난 포스트 참조(링크)[http://blog.eegg.io/2016/06/24/1.html])
+지난 번에 사용했던 컴퓨트 엔진 메뉴 중 인스턴스 템플릿 메뉴를 선택하고 생성버튼을 클릭하면 위와 같은 화면을 볼 수 있다. 인스턴스 설정과 비슷하게 머신 유형과 부팅 이미지, API 엑세스, 방화벽 규칙을 설정하고 자동화 메뉴의 시작 스크립트에 아파치를 설치하는 쉘 스크립트를 작성한다. (지난 포스트 참조)
  
 템플릿을 생성한 뒤 인스턴스 그룹을 생성한다. 컴퓨트 엔진 서비스의 좌측 메뉴 중 인스턴스 그룹 메뉴를 선택하고 인스턴스 그룹 만들기 버튼을 클릭하면 다음과 같은 화면을 볼 수 있다.  
 ![그룹 만들기](https://cloud.githubusercontent.com/assets/6007758/16829870/5b6606d0-49d6-11e6-809c-5c5bb1d00383.png)
